use Deque for choosen events to prevent null pointer exceptions